# SNESoIP

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  LICENCE.md  LICENSE  README.md
Archive/Rev0-1/: README.md
Archive/Rev2/: README.md
Doc/: .gitignore  Doxyfile  index.html
Firmware/: .clang-format  .gitignore  Makefile  README.md  platformio.ini
Firmware/include/: Client.h  Config.h  ExchangeClient.h  FreeRTOSConfig.h  SNES.h  TCPClient.h  TCPServer.h  Terminal.h  WiFi.h  main.h  stm32f10x_conf.h
Firmware/src/: Client.c  ExchangeClient.c  Firmware.c  SNES.c  TCPClient.c  TCPServer.c  Terminal.c  WiFi.c  firmware.c  main.c  sdkconfig.h
Hardware/: README.md
ROMs/: README.md
ROMs/SnIRC/: Makefile
ROMs/Zombies Ate My Neighbors/: README.md  Zombies Ate My Neighbors (U) [!].asar  Zombies Ate My Neighbors (U) [!].asm
Server/: .gitignore  CMakeLists.txt  README.md  config.ini  default.nix
Server/src/: CommonInclude  Server.c  main.c  server.c
Tools/: README.md
Tools/CommonInclude/: CMakeLists.txt  CommonInclude.c  CommonInclude.h
addon/keyboard/: README.md
bootloader/host-linux/: Makefile  README.md  com.c  fboot.c  protocol.h
bootloader/host-win/: fboot.dev  fboot17a.c  (+2 more)
firmware/: Makefile  README.md  config.h  config.mk  firmware.c  firmware.h  io.c  io.h
firmware-dev/: README.md  config.c  config.h  io.c
firmware-untested/: Makefile  config.h  firmware.c
hardware/: CHANGELOG
obsolete/: README.md
server/: Makefile  README.md  config.c  config.h  server.c  server.conf  server.h  server.sh
testing/: README.md
(+216 files in other folders)
